# psdatacall_demo-20211109-

./: .gitignore  CMakeLists.txt  Device (copy).ini  Device.ini  Makefile  getpsdata  main.cpp  readme.md
record/: AudionPCM.pcm
src/: main.cpp
